[package]
name = "payments"
version = "0.1.0"
authors = ["Joey Yandle <dragon@dancingdragon.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1"
lazy_static = "1.4.0"
rust_decimal = "1.15"
rust_decimal_macros = "1.15"
serde = { version = "1.0", features = ["derive"] }
