[package]
name = "payments"
version = "0.1.0"
authors = ["Joey Yandle <dragon@dancingdragon.net>"]
edition = "2018"

[lib]
name = "payments"
path = "src/lib.rs"

[[bin]]
name = "payments"
path = "src/bin/main.rs"

[dependencies]
csv = "1.1"
lazy_static = "1.4.0"
rust_decimal = "1.15"
rust_decimal_macros = "1.15"
serde = { version = "1.0", features = ["derive"] }
